[package]
name = "erl_ast"
version = "0.0.5"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust representation of Abstract Syntax Trees of Erlang modules"
documentation = "https://docs.rs/erl_ast"
homepage = "https://github.com/sile/erl_ast"
repository = "https://github.com/sile/erl_ast"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"

[dependencies]
beam_file = "0.2"
eetf = "0.3"
num = "0.1"
