[package]
name = "erl_ast"
version = "0.0.7"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust representation of Abstract Syntax Trees of Erlang modules"
documentation = "https://docs.rs/erl_ast"
homepage = "https://github.com/sile/erl_ast"
repository = "https://github.com/sile/erl_ast"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"

[dependencies]
beam_file = "0.2.4"
eetf = "0.4.0"
num = "0.2.1"
