[package]
name = "erl_ast"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust representation of Abstract Syntax Trees of Erlang modules"
documentation = "https://docs.rs/erl_ast"
homepage = "https://github.com/sile/erl_ast"
repository = "https://github.com/sile/erl_ast"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"

[badges]
coveralls = {repository = "sile/erl_ast"}

[dependencies]
beam_file = "0.2.4"
eetf = "0.5"
num = "0.4"
thiserror = "1"
